Add jquery cdn link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 		</aside>
 
 	</main>
-    
-    <script src="assets/js/script.js"></script>
+	<!-- JQuery cdn link -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+	<!-- link to the js file -->
+    <script src="assets/js/script2.js"></script>
 </body>
 </html>
