Add readme content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- css file -->
     <link href="assets/css/style.css" rel="stylesheet">
 	<!-- JQuery cdn link -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>Sidebar Menus Using JS</title>
 </head>
 <body>
